Bug 461894 - Paste into active layer will paste at the canvas center
Summary: Paste into active layer will paste at the canvas center
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.1.3
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-16 01:15 UTC by Protoniv
Modified: 2023-01-05 03:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Protoniv 2022-11-16 01:15:02 UTC
SUMMARY
"Paste into active layer" copy/cut from other layer will place at the canvas center.
"Paste"(ctrl+v) and "Paste at cursor"(ctrl+alt+v) works fine.

Happened both in 5.1.3 and master

STEPS TO REPRODUCE
1. Draw something, make a selection, copy/cut the selected area
2. Paste into active layer
3. The pasted content is at the center canvas

EXPECTED RESULT
Should at the same canvas position

ADDITIONAL INFORMATION
Doubt if it has something related to bug 459111
Comment 1 Protoniv 2022-11-16 01:20:37 UTC
Correction:
"Paste into active layer" copy/cut from the same document will place at the canvas center.
Sorry, my bad.
Comment 2 Raghavendra kamath 2022-12-24 04:54:30 UTC
I can confirm this on Linux. This is indeed annoying
Comment 3 Raghavendra kamath 2022-12-24 04:57:02 UTC
There is a feedback thread on KA about this https://krita-artists.org/t/copy-and-paste-to-active-layer-dont-respect-the-position-of-copy-anymore/52121/17
Comment 4 vanyossi 2023-01-03 02:39:22 UTC
Git commit ad780c9e3636d04ebab82c9ac434c1343cb3fc14 by Ivan Yossi.
Committed on 03/01/2023 at 02:17.
Pushed by ivany into branch 'master'.

Only center paste into active layer if contents are outside image bounds

M  +3    -1    libs/ui/actions/KisPasteActionFactories.cpp

https://invent.kde.org/graphics/krita/commit/ad780c9e3636d04ebab82c9ac434c1343cb3fc14
Comment 5 vanyossi 2023-01-05 03:38:28 UTC
Git commit c69ed22d9c8881a36dddf3596629c201487398b0 by Ivan Yossi.
Committed on 04/01/2023 at 15:26.
Pushed by ivany into branch 'krita/5.1'.

Only center paste into active layer if contents are outside image bounds
(cherry picked from commit ad780c9e3636d04ebab82c9ac434c1343cb3fc14)

M  +3    -1    libs/ui/actions/KisPasteActionFactories.cpp

https://invent.kde.org/graphics/krita/commit/c69ed22d9c8881a36dddf3596629c201487398b0