Only center paste into active layer if contents are outside image bounds

BUG:461894
(cherry picked from commit ad780c9e3636d04ebab82c9ac434c1343cb3fc14)